update Sandbox