@@ -10,7 +10,6 @@ import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.RoundEnvironment;
@@ -101,7 +100,7 @@ public class SqlParametersAnnotationProcessor extends AbstractProcessor {
 			});
 		});
 
-		var data = String.join(Constants.NEW_LINE, (allParameters.values().stream().map(i -> i.pack()).collect(Collectors.toList())));
+		var data = String.join(Constants.NEW_LINE, (allParameters.values().stream().map(i -> i.pack()).toList()));
 
 		try {
 			try (var output = new BufferedOutputStream(
